dropdown poc, styles are gross but functionally it works

--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -515,6 +515,10 @@ u-overflowAuto {
   border-top: $thin-border-size solid $base-border-color;
 }
 
+.u-border {
+  border: $thin-border-size solid $base-border-color;
+}
+
 .u-borderBottom {
   border-bottom: $thin-border-size solid $base-border-color;
 }
