Get dropdown shifting back and forth few menus.

--- a/src/component/field/Dropdown.sass
+++ b/src/component/field/Dropdown.sass
@@ -3,10 +3,13 @@
 .field {
   composes: u-border u-paddingAS from '../../styles/utils.scss';
   background-color: $zd-color-white;
+  border-radius: #{4/$font-size}rem;
 }
 
 .container {
   composes: u-marginBM u-border u-paddingAS u-posRelative from '../../styles/utils.scss';
+  border-radius: #{4/$font-size}rem;
+  background-color: $zd-color-white;
 }
 
 .menu {
