--- a/src/embed/automaticAnswers/automaticAnswers.scss
+++ b/src/embed/automaticAnswers/automaticAnswers.scss
@@ -110,6 +110,10 @@
   font-size: #{12/$font-size}rem;
   border-radius: #{3/$font-size}rem;
   border: #{1/$font-size}rem solid $zd-color-oil !important;
+
+  &:disabled {
+    border-color: transparent !important;
+  }
 }
 
 .AutomaticAnswersBtn--no {
