--- a/src/component/field/Dropdown.sass
+++ b/src/component/field/Dropdown.sass
@@ -69,4 +69,8 @@
 .input {
   composes: Form-field from '../../styles/components/Form.scss';
   composes: u-hsizeAll from '../../styles/utils.scss';
+
+  &:focus {
+    border: $thin-border-size solid $stroke-focused-color;
+  }
 }
