Add line dividers around back button and some spacing around menu

--- a/src/component/field/DropdownMenu.sass
+++ b/src/component/field/DropdownMenu.sass
@@ -13,6 +13,8 @@
   overflow-y: scroll;
   background-color: $zd-color-white;
   width: 99.5%; /* 1 */
+  padding-top: #{8/$font-size}rem;
+  padding-bottom: #{8/$font-size}rem;
 
   ::-webkit-scrollbar {
     display: none;
