--- a/src/component/field/DropdownOption.sass
+++ b/src/component/field/DropdownOption.sass
@@ -20,6 +20,12 @@
   background-color: $zd-color-white-smoke;
 }
 
+.fieldBorder {
+  composes: u-borderBottom from '../../styles/utils.scss';
+  padding-bottom: #{5/$font-size}rem !important;
+  margin-bottom: #{5/$font-size}rem;
+}
+
 .arrowNext {
   composes: u-pullRight from '../../styles/utils.scss';
 
@@ -29,7 +35,7 @@
   border-bottom: #{5/$font-size}rem solid transparent;
   border-left: #{7/$font-size}rem solid $zd-color-aluminum;
   margin-top: #{2/$font-size}rem;
-  margin-right: #{12/$font-size}rem;
+  margin-right: #{10/$font-size}rem;
 }
 
 .arrowBack {
