Add new field focus state, make input not overlap dropdown arrow, fix hover for dropdown controls

--- a/src/component/field/DropdownOption.sass
+++ b/src/component/field/DropdownOption.sass
@@ -18,6 +18,14 @@
 
 .fieldFocused {
   background-color: $zd-color-white-smoke;
+
+  .arrowNext {
+    border-left: #{7/$font-size}rem solid $zd-color-oil;
+  }
+
+  .arrowBack {
+    border-right: #{7/$font-size}rem solid $zd-color-oil;
+  }
 }
 
 .fieldBorder {
