--- a/src/component/field/Dropdown.sass
+++ b/src/component/field/Dropdown.sass
@@ -1,6 +1,7 @@
 @import '../../styles/_vars.scss';
 
 .container {
+  composes: Form-field from '../../styles/components/Form.scss';
   composes: u-marginBM u-posRelative from '../../styles/utils.scss';
   color: $zd-color-oil;
 }
@@ -27,13 +28,13 @@
   composes: u-textXHeight from '../../styles/utils.scss';
 }
 
-.input {
-  composes: Form-field from '../../styles/components/Form.scss';
-  composes: u-hsizeAll from '../../styles/utils.scss';
+.inputFocus {
+  border: $thin-border-size solid $stroke-focused-color;
+  box-shadow: 0 0 0 #{3/$font-size}rem rgba(153,153,153, 0.4);
+}
 
-  &:focus {
-    border: $thin-border-size solid $stroke-focused-color;
-  }
+.input {
+  width: 90% !important;
 
   &::-webkit-input-placeholder {
     color: $zd-color-oil;
