--- a/src/component/field/DropdownOption.sass
+++ b/src/component/field/DropdownOption.sass
@@ -5,26 +5,28 @@
 
   &:hover {
     background-color: $zd-color-white-smoke;
+    color: $zd-color-oil;
 
     .arrowNext {
-      border-left: #{7/$font-size}rem solid $zd-color-oil;
+      border-left: #{7/$font-size}rem solid $zd-color-dark-gray;
     }
 
     .arrowBack {
-      border-right: #{7/$font-size}rem solid $zd-color-oil;
+      border-right: #{7/$font-size}rem solid $zd-color-dark-gray;
     }
   }
 }
 
 .fieldFocused {
   background-color: $zd-color-white-smoke;
+  color: $zd-color-oil;
 
   .arrowNext {
-    border-left: #{7/$font-size}rem solid $zd-color-oil;
+    border-left: #{7/$font-size}rem solid $zd-color-dark-gray;
   }
 
   .arrowBack {
-    border-right: #{7/$font-size}rem solid $zd-color-oil;
+    border-right: #{7/$font-size}rem solid $zd-color-dark-gray;
   }
 }
 
