--- a/src/component/field/DropdownMenu.sass
+++ b/src/component/field/DropdownMenu.sass
@@ -7,14 +7,17 @@
 .menu {
   composes: u-posAbsolute u-border u-zIndex1 u-posStart--flush from '../../styles/utils.scss';
   border-radius: #{4/$font-size}rem;
-  top: #{35/$font-size}rem;
+  border-color: $zd-color-aluminum;
+  top: #{36/$font-size}rem;
+  left: #{-1/$font-size}rem;
   height: #{200/$font-size}rem;
   overflow-x: hidden;
   overflow-y: scroll;
   background-color: $zd-color-white;
-  width: 99.5%; /* 1 */
+  width: 100%; /* 1 */
   padding-top: #{8/$font-size}rem;
   padding-bottom: #{8/$font-size}rem;
+  box-shadow: 0 0 #{6/$font-size}rem 0 rgba($base-shadow, .2);
 
   ::-webkit-scrollbar {
     display: none;
