--- a/src/component/field/DropdownOption.sass
+++ b/src/component/field/DropdownOption.sass
@@ -31,9 +31,7 @@
 }
 
 .fieldBorder {
-  composes: u-borderBottom from '../../styles/utils.scss';
-  padding-bottom: #{5/$font-size}rem !important;
-  margin-bottom: #{5/$font-size}rem;
+  composes: u-borderBottom u-marginBT u-paddingBT from '../../styles/utils.scss';
 }
 
 .arrowNext {
