make 'white' into zendesk white

--- a/src/embed/automaticAnswers/automaticAnswers.scss
+++ b/src/embed/automaticAnswers/automaticAnswers.scss
@@ -106,7 +106,7 @@
 }
 
 .AutomaticAnswersBtn {
-  color: white;
+  color: $zd-color-white;
   font-size: #{12/$font-size}rem;
   border-radius: #{3/$font-size}rem;
   border: #{1/$font-size}rem solid $zd-color-oil !important;
