Add nice transition for arrow in dropdown

--- a/src/component/field/Dropdown.sass
+++ b/src/component/field/Dropdown.sass
@@ -18,6 +18,7 @@
     pointer-events: none;
     fill: $zd-color-silver-sand;
     color: $zd-color-silver-sand;
+    transition: all 0.2s ease;
   }
 }
 
