--- a/src/component/field/Dropdown.sass
+++ b/src/component/field/Dropdown.sass
@@ -94,31 +94,28 @@
 }
 
 .menu {
-  // composes: u-posAbsolute u-border u-hsizeAll u-zIndex1 u-posStart--flush from '../../styles/utils.scss';
-  // border-radius: #{4/$font-size}rem;
-  // top: #{35/$font-size}rem;
-  // height: #{200/$font-size}rem;
-  // overflow-x: hidden;
-  // overflow-y: scroll;
-  // background-color: $zd-color-white;
+  composes: u-hsizeAll from '../../styles/utils.scss';
 
   overflow: auto;
-  float: left;
-  width: 100%;
-  margin-left: 0;
-  margin-right: 0;
-  transition: all 1s ease-in-out;
+  background: white;
+  height: #{200/$font-size}rem;
 
-  ::-webkit-scrollbar {
-    display: none;
-  }
+  transition: all 0.4s ease;
 }
 
 .menuLeft {
-  margin-left: -100%;
+  position: absolute;
+  top: #{8/$font-size}rem;
+  left: #{300/$font-size}rem;
 }
 
 .menuRight {
-  margin-right: -100%;
+  position: absolute;
+  top: #{8/$font-size}rem;
+  right: #{300/$font-size}rem;
 }
 
+.menuNeutral {
+  right: 0;
+  left: 0;
+}
