--- a/src/component/field/Dropdown.sass
+++ b/src/component/field/Dropdown.sass
@@ -57,6 +57,10 @@ $menu-height: #{200/$font-size}rem;
   }
 }
 
+.inputError {
+  composes: Form-field--invalid from '../../styles/components/Form.scss';
+}
+
 .labelMobile {
   composes: u-textSize15 from '../../styles/utils.scss';
 }
