--- a/src/component/field/Dropdown.sass
+++ b/src/component/field/Dropdown.sass
@@ -17,6 +17,12 @@ $menu-height: #{200/$font-size}rem;
   padding-left: #{8/$font-size}rem;
   padding-bottom: #{7/$font-size}rem;
 
+  [dir="rtl"] & {
+    left: #{10/$font-size}rem;
+    right: initial;
+    padding-right: #{8/$font-size}rem;
+  }
+
   svg {
     pointer-events: none;
     fill: $zd-color-silver-sand;
@@ -113,7 +119,7 @@ $menu-height: #{200/$font-size}rem;
   composes: u-hsizeAll from '../../styles/utils.scss';
 }
 
-@keyframes menuNext {
+@keyframes right {
   from {
     left: #{300/$font-size}rem;
   }
@@ -122,7 +128,7 @@ $menu-height: #{200/$font-size}rem;
   }
 }
 
-@keyframes menuBack {
+@keyframes left {
   from {
     right: #{300/$font-size}rem;
   }
@@ -131,14 +137,14 @@ $menu-height: #{200/$font-size}rem;
   }
 }
 
-.menuNextAnimate {
+.animateRight {
   composes: u-posAbsolute from '../../styles/utils.scss';
 
-  animation: menuNext 0.2s linear 0s 1;
+  animation: right 0.2s linear 0s 1;
 }
 
-.menuBackAnimate {
+.animateLeft {
   composes: u-posAbsolute from '../../styles/utils.scss';
 
-  animation: menuBack 0.2s linear 0s 1;
+  animation: left 0.2s linear 0s 1;
 }
