Remove Icons that we aren't using and rename carat to chevron

--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -138,18 +138,6 @@
   }
 }
 
-.Icon--paperclip-medium {
-  padding-right: 0;
-
-  svg {
-    fill: $icon-inactive-color;
-    min-width: #{36/$font-size}rem; /* 1 */
-    min-height: #{36/$font-size}rem; /* 1 */
-    height: #{36/$font-size}rem;
-    width: #{36/$font-size}rem;
-  }
-}
-
 .Icon--paperclip-large {
   padding-right: 0;
 
@@ -188,18 +176,6 @@
   }
 }
 
-.Icon--tick-inline {
-  padding-right: #{8/$font-size}rem;
-
-  svg {
-    fill: $zd-color-white;
-    min-width: #{12/$font-size}rem;
-    min-height: #{9/$font-size}rem;
-    width: #{12/$font-size}rem;
-    height: #{9/$font-size}rem;
-  }
-}
-
 .Icon--circleTick-large {
   svg {
     width: #{48/$font-size}rem;
@@ -224,7 +200,7 @@
   }
 }
 
-.Icon--caret {
+.Icon--chevron {
   svg {
     fill: $secondary-color;
     min-width: #{7/$font-size}rem; /* 1 */
@@ -311,24 +287,5 @@
     min-height: #{7/$font-size}rem; /* 1 */
     height: #{7/$font-size}rem;
     width: #{7/$font-size}rem;
-  }
-}
-
-.Icon--article {
-  box-sizing: border-box;
-
-  svg {
-    fill: $cta-color;
-    color: #999;
-    padding: 0;
-    display: inline-block;
-    position: relative;
-    top: 50%;
-    min-width: #{23/$font-size}rem;
-    min-height: #{23/$font-size}rem;
-    height: #{23/$font-size}rem;
-    width: #{23/$font-size}rem;
-    margin-top: -#{12/$font-size}rem;
-    margin-left: #{1/$font-size}rem;
   }
 }
