More naming and formatting

--- a/src/component/field/Checkbox.sass
+++ b/src/component/field/Checkbox.sass
@@ -45,7 +45,7 @@
 
 .focused {
   border: $thin-border-size solid $stroke-focused-color;
-  box-shadow: 0 0 0 #{3/$font-size}rem rgba(153,153,153, 0.4);
+  box-shadow: 0 0 0 #{3/$font-size}rem rgba(153,153,153,0.4);
 }
 
 .invalid {
