--- a/src/styles/components/Form.scss
+++ b/src/styles/components/Form.scss
@@ -99,6 +99,28 @@ $Form-fontSize: #{13/$font-size}rem;
   padding: #{7/$font-size}rem;
 }
 
+.Form-checkbox {
+  width: #{14/$font-size}rem;
+  background-color: $base-color;
+  border: $thin-border-size solid $stroke-color;
+  border-radius: #{4/$font-size}rem;
+  margin-right: #{10/$font-size}rem;
+  top: #{1/$font-size}rem;
+
+  .Icon--check {
+    visibility: hidden;
+  }
+}
+
+.Form-checkboxInput {
+  width: #{14/$font-size}rem;
+  height: #{14/$font-size}rem;
+}
+
+.Form-checkboxInput:checked + .Form-checkbox .Icon--check {
+  visibility: visible;
+}
+
 .Form-fieldArrows {
   position: absolute;
   right: #{14/$font-size}rem;
@@ -119,6 +141,10 @@ $Form-fontSize: #{13/$font-size}rem;
   padding: #{11/$font-size}rem $Form-spacing;
   height: #{43/$font-size}rem;
 
+  .Form-checkboxCaption {
+    font-size: #{15/$font-size}rem;
+  }
+
   &.is-mobile {
     input:not([type="checkbox"]), textarea, select {
       width: calc(100% - #{40/$font-size}rem); /* 1 */
@@ -131,7 +157,8 @@ $Form-fontSize: #{13/$font-size}rem;
   }
 }
 
-.Form-field--focused {
+.Form-field--focused,
+.Form-checkboxInput--focused + .Form-checkbox {
   border: $thin-border-size solid $stroke-focused-color;
   box-shadow: 0 0 0 #{3/$font-size}rem rgba(153,153,153, 0.4);
 
@@ -141,7 +168,8 @@ $Form-fontSize: #{13/$font-size}rem;
 }
 
 .Form-field--invalid,
-.Form-field--invalid:hover {
+.Form-field--invalid:hover,
+.Form-checkboxInput--invalid + .Form-checkbox {
   @include error-state($thin-border-size);
 }
 
@@ -158,6 +186,10 @@ $Form-fontSize: #{13/$font-size}rem;
 
 .Form-field--dropdown {
   padding-left: #{12/$font-size}rem;
+}
+
+.Form-checkboxCaption {
+  color: $zd-color-monsoon;
 }
 
 .Form-field--blurred.Form-field--invalid {
