loading spinner smaller for HC

--- a/src/component/helpCenter/HelpCenter.sass
+++ b/src/component/helpCenter/HelpCenter.sass
@@ -12,3 +12,8 @@
 .loadingSpinnerIE {
   composes: u-paddingBXL u-paddingRXL from '../../styles/utils.scss';
 }
+
+.loadingSpinnerSvg {
+  width: #{32/$font-size}rem;
+  height: #{32/$font-size}rem;
+}
