Remove svg's fixed position

--- a/src/component/helpCenter/HelpCenter.sass
+++ b/src/component/helpCenter/HelpCenter.sass
@@ -6,7 +6,7 @@
 }
 
 .loadingSpinner {
-  composes: u-flex u-posFill u-posAbsolute u-flexAlignItemsCenter u-flexJustifyCenter from '../../styles/utils.scss';
+  composes: u-flex u-flexJustifyCenter from '../../styles/utils.scss';
   margin-top: #{22/$font-size}rem;
 }
 
