Add test in order to verify styles in desktop and mobile

--- a/src/component/frameFactory/EmbedWrapper.sass
+++ b/src/component/frameFactory/EmbedWrapper.sass
@@ -9,8 +9,26 @@
   }
 }
 
+.closeBtnMobile {
+  right: #{310/$font-size}rem;
+  padding: #{15/$font-size}rem #{20/$font-size}rem #{16/$font-size}rem;
+
+  & > span {
+    padding: 0 !important;
+  }
+}
+
 .backBtn {
   left: #{276/$font-size}rem;
+
+  & > span {
+    padding-left: 0 !important;
+    padding-right: #{12/$font-size}rem !important;
+  }
+}
+
+.backBtnMobile {
+  left: #{294/$font-size}rem;
 
   & > span {
     padding-left: 0 !important;
