Change reference to title as name

--- a/src/component/field/DropdownOption.sass
+++ b/src/component/field/DropdownOption.sass
@@ -75,7 +75,7 @@
   margin-top: #{4/$font-size}rem;
 }
 
-.title {
+.name {
   composes: u-inlineBlock from '../../styles/utils.scss';
   width: 90%;
 }
