* Respect hideZendeskLogo config * Use the proper label for the form title

--- a/src/component/channelChoice/ChannelChoice.sass
+++ b/src/component/channelChoice/ChannelChoice.sass
@@ -10,6 +10,10 @@
   composes: u-marginBL from '../../styles/utils.scss';
 }
 
+.footerNoLogo {
+  padding-bottom: 0 !important;
+}
+
 .container {
   // need to specifically override these rather than compose u-paddingHN
   // so that it overrides correctly
