* Adjust padding for design check * Stop test failing * Remove fallback strings

--- a/src/component/channelChoice/ChannelChoice.sass
+++ b/src/component/channelChoice/ChannelChoice.sass
@@ -11,12 +11,14 @@
 }
 
 .footerNoLogo {
+  padding-top: #{10/$font-size}rem !important;
   padding-bottom: 0 !important;
 }
 
 .container {
   // need to specifically override these rather than compose u-paddingHN
   // so that it overrides correctly
+  padding-top: #{10/$font-size}rem !important;
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
