Compose off base classes and apply to mobile styles

--- a/src/component/frame/EmbedWrapper.sass
+++ b/src/component/frame/EmbedWrapper.sass
@@ -10,12 +10,8 @@
 }
 
 .closeBtnMobile {
+  composes: closeBtn;
   right: #{310/$font-size}rem;
-  padding: #{15/$font-size}rem #{20/$font-size}rem #{16/$font-size}rem;
-
-  & > span {
-    padding: 0 !important;
-  }
 }
 
 .backBtn {
@@ -28,10 +24,6 @@
 }
 
 .backBtnMobile {
+  composes: backBtn;
   left: #{294/$font-size}rem;
-
-  & > span {
-    padding-left: 0 !important;
-    padding-right: #{12/$font-size}rem !important;
-  }
 }
