--- a/src/component/helpCenter/HelpCenterMobile.sass
+++ b/src/component/helpCenter/HelpCenterMobile.sass
@@ -38,3 +38,11 @@
   /* 1 */
   height: calc(100% - #{60/$font-size}rem);
 }
+
+.channelChoiceContainer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  min-height: 30%;
+  box-shadow: 0px #{-2/$font-size}rem #{4/$font-size}rem 0px rgba(51,51,51,0.33);
+}
