mobile channel choice with hc logic working

--- a/src/component/channelChoice/ChannelChoiceMobile.sass
+++ b/src/component/channelChoice/ChannelChoiceMobile.sass
@@ -17,6 +17,7 @@
   margin-top: #{5/$font-size}rem;
   padding-left: #{15/$font-size}rem;
   padding-right: #{15/$font-size}rem;
+  padding-bottom: #{15/$font-size}rem;
 }
 
 .cancelButton {
