--- a/src/component/helpCenter/HelpCenterMobile.sass
+++ b/src/component/helpCenter/HelpCenterMobile.sass
@@ -40,9 +40,9 @@
 }
 
 .channelChoiceContainer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: 100%;
-  min-height: 30%;
   box-shadow: 0px #{-2/$font-size}rem #{4/$font-size}rem 0px rgba(51,51,51,0.33);
+  background: #FFFFFF;
 }
