--- a/src/component/channelChoice/ChannelChoice.sass
+++ b/src/component/channelChoice/ChannelChoice.sass
@@ -7,7 +7,7 @@
 @import '../../styles/_vars.scss';
 
 .hr {
-  composes: u-paddingN u-marginTS u-marginBN u-marginHS u-borderNone from global;
+  composes: u-paddingAN u-marginTS u-marginBN u-marginHS u-borderNone from global;
   border-bottom: #{1/$font-size}rem solid $zd-color-gainsboro !important;
   // ie hacks
   color: $zd-color-gainsboro;
